@@ -5,6 +5,8 @@
     * Fix highlighting on Ruby 1.9 (#65)
     * Fix extension munging when pretty permalinks are enabled (#64)
     * Stop sorting categories (#33)
+  * Minor Enhancement
+    * Add svg liquid tag (and mime type) for embedding SVG images [github.com/dekellum]
 
 == 0.5.7 / 2010-01-12
   * Minor Enhancements
